--- a/share/themes/flatmin/assets/sass/jivoo/jtk/_topnav.scss
+++ b/share/themes/flatmin/assets/sass/jivoo/jtk/_topnav.scss
@@ -70,8 +70,9 @@ header {
           }
 
           .icon {
-            margin-left: 0;
-            margin-right: 10px;
+            & + .label {
+              margin-left: 10px;
+            }
           }
         }
       }
